k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nbody
  namespace: nbody
spec:
  ingressClassName: traefik
  rules:
    - host: nbody.hugotanguy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nbody-client
                port:
                  name: http
